# pcbjam

./: .gitignore  .gitmodules  CLAUDE.md  DEBUG.md  README.md  build.md
.github/workflows/: ci-full-build.yml  ci-ubicloud.yml  ci.yml  deploy-demo.yml  publish-wasm.yml  release.yml  screenshot-changelog.yml  wasm-build.yml  wasm-opt-bench.yml  wasm-opt-validate.yml
core/: .gitignore  CMakeLists.txt
core/include/: advanced_config.h  config.h  string_utils.h  wx_shim.h
core/include/wx/: confbase.h  debug.h  ffile.h  file.h  log.h  string.h
core/src/: test_kimath.cpp
deploy/demo/: README.md  _headers  _redirects  gallery.json
docker/: Dockerfile  build-calculator.sh  build.sh  docker-compose.yml  shell.sh
docs/: 01-KNOWLEDGE-BASE-FULL.md  02-PHASE2-CORE-EXTRACTION.md  03-PHASE3-WXWIDGETS-WASM.md  07-KICAD-WASM-BUILD-PLAN.md  IMPLEMENTATION_PLAN.md  KNOWLEDGE_BASE.md  WXWIDGETS-WASM-PORT-PROGRESS.md  build.md  ci-build-slowness-findings.md  wasm-exceptions-experiment.md
docs/research/: 0001-opengl-gal-webgl-strategy.md
features/browser-tools/: 0001-kicad-wasm-tool-activation-investigation.md  0002-wasm-coroutine-deep-dive.md  0003-wxauitoolbar-registration-fix.md
features/ipc-api/: ipc-api.md
features/pl-editor/: 0001-pl-editor-port.md  kicad.patch  root.patch  wxwidgets.patch
features/web-init/: 0001-web-app-spec.md  0002-url-regex-modal-followup.md
features/webgl/: 0003-webgl-gal-implementation-plan.md
features/yjs-bridge/: 0005-eeschema-apply-bugfix-prompt.md  0006-eeschema-apply-findings.md  0007-eeschema-essential-ops-findings.md
logs/: .gitignore
patches/: 0002-wxbase-wasm-integration.patch
research/: threading_1.md  threading_2.md
scripts/: build-3d-native-test.sh  build-3d-webgl-test.sh  build-eh-spike.sh  build-gal-webgl-test.sh  build-kicad-wasm.sh  build-monitor.sh  build-pcbnew-wasm.sh  build-wasm-test.sh  build-wx-wasm.sh  build-wxuniversal-wasm.sh  compare-screenshots.sh  create-feature-patches.sh  kicad-diff-stats.sh  setup-worktree.sh  test-3d-regression.sh  test-gal-regression.sh  test-gal-webgl.sh  update-baseline-screenshots.sh
scripts/bench/: README.md  o2-config-sweep.sh  setup-vm.sh  sweep.conf  vm-build.sh  wasm-opt-bench.sh
scripts/binaryen-hoist-pass/: HoistCppCatches.escape-wip.cpp  build-wasm-opt.sh
scripts/common/: apply-asyncify.sh  apply-finalize.sh  asyncify-imports.txt  asyncify-removelist.txt  env.sh  functions.sh  get-wasm-opt.sh  hoist-and-asyncify.sh  inject-dyncall-shims.sh  logging.sh  patch-env-shim.mjs  versions.sh
scripts/deploy/: build-demo.mjs  build-editor.mjs  dev-demo.mjs  publish-content.mjs  publish-libs.ts  publish-models.ts  publish-wasm.mjs  wasm-cache-hash.mjs
scripts/git-workflow/: assert-clean.sh  for-each-repo.sh  repos.sh
scripts/kicad/: audit-merged-symbols.sh  build-calculator.sh  build-kicad-target.sh  build-kicad_editor.sh  build-ngspice_service.sh  build-pcbnew.sh  build-pl_editor.sh  build-sym_convert.sh
site/: .env.example  .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  postcss.config.mjs  vercel.json  vitest.config.ts
site/scripts/: r2-cors.json  r2-deploy.sh  sync-demo-wasm.sh
site/src/: content.config.ts  middleware.ts
site/test/: boot-overrides.test.ts  waitlist.test.ts
tests/: GL_README.md  README.md  WHATWORKS.md  find-hardcoded-coords.sh  global-setup.ts  package-lock.json  package.json  playwright-asyncify.config.ts  playwright-button-finder.config.ts  playwright-calculator.config.ts  playwright-coroutine.config.ts  playwright-kicad.config.ts  playwright-web.config.ts  playwright.config.ts  screenshot-manifest.json
tests/3d-regression/: README.md  floors.json  manifest.json
tests/3d-regression/native/: CMakeLists.txt  board_adapter_test_impl.cpp  config.h  fbo_capture.cpp  fbo_capture.h  kicad_stubs_3d.cpp  kicad_stubs_3d.h  render3d_test_accessor.cpp  render3d_test_accessor.h  scene3d_native_test.cpp  settings_3d_stub.cpp
tests/apps/: .gitignore  Makefile.wasm
tests/asyncify/: asyncify-races.spec.ts  eh-spike-safari.spec.ts  eh-spike.spec.ts
tests/collab/: browser-entry-v2.ts  browser-entry.ts  build.mjs
tests/e2e/: 3d-webgl.spec.ts  aui-resize.spec.ts  aui.spec.ts  auinotebook.spec.ts  bitmapbuttons.spec.ts  boot.spec.ts  button-finder.spec.ts  calendar.spec.ts  clipboard.spec.ts  collapsible.spec.ts  contextmenu.spec.ts  coroutine-async-preload.spec.ts  coroutine.spec.ts  (+51 more)
tests/gal-regression/native/: CMakeLists.txt  bitmap_base_stub.h  gal_native_test.cpp  gal_test_accessor.cpp  gal_test_accessor.h  kicad_stubs.cpp  kifont_stub.h
wasm/: CMakeLists.txt  README.md
wasm/bindings/: calculator_embind.cpp  collab_common.h  collab_presence_core.h  collab_presence_style.h  eeschema_embind.cpp  kicad_editor_embind.cpp  pcbnew_embind.cpp  pl_editor_embind.cpp  symbol_editor_embind.cpp
wasm/cli/: kicad_tools_main.cpp  pcb_convert_main.cpp  sym_convert_main.cpp  sym_convert_pre.js  sym_convert_stubs.cpp
wasm/cmake/: FindKiplatformWASM.cmake  FindLibcontextWASM.cmake  Findngspice.cmake  FindwxWidgets.cmake  KiCadWASMConfig.cmake
wasm/editor/: CMakeLists.txt  merged_kiface_dispatch.cpp
wasm/gl1/: README.md  sources.txt  wrapped_symbols.txt
wasm/gl1/include/: gl1_shim.h
wasm/gl1/src/: gl1_dlist.cpp  gl1_draw.cpp  gl1_entry_ffp.cpp  gl1_entry_wrapped.cpp  gl1_glu.cpp  gl1_immediate.cpp  gl1_matrix.cpp  gl1_shaders.cpp  gl1_state.cpp
wasm/kiplatform/: CMakeLists.txt  app.cpp  drivers.cpp  environment.cpp  io.cpp  policy.cpp  secrets.cpp  sysinfo.cpp  ui.cpp
wasm/libcontext/: CMakeLists.txt  libcontext_wasm.cpp  libcontext_wasm.h
wasm/ngspice-service/: CMakeLists.txt  ngspice_service_main.cpp
wasm/occ-service/: occ_service_main.cpp
wasm/shims/: futex_yield.c  gl_immediate_shim.js  mallinfo_stub.c  nanosleep_yield.c
wasm/stubs/: gl_ffp_stub.c  model_substitution_stub.cpp  nl_pl_editor_plugin_stub.cpp  sharedspice_client.cpp
wasm/stubs/ngspice/: sharedspice.h
web/: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
(+503 files in other folders)
